--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -18,18 +18,38 @@ code {
   text-decoration: none;
 }
 
-.bubble-icon {
-  text-align: center;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  img {
-    display: block;
-    margin: 0 auto;
+.left-column {
+  .bubble-icon {
+    text-align: center;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    img {
+      display: block;
+      margin: 0 auto;
+    }
+    p.MuiTypography-root {
+      color: #fff;
+      font-size: 1.2em;
+    }
   }
-  p.MuiTypography-root {
-    color: #fff;
-    font-size: 1.2em;
+}
+
+@media only screen and (max-width: 768px)  {
+  .left-column {
+    max-height: 240px;
+    .bubble-icon {
+      position: relative;
+      width: 80%;
+      img {
+        display: block;
+        margin: 0 auto;
+      }
+      p.MuiTypography-root {
+        color: #fff;
+        font-size: 1.2em;
+      }
+    }
   }
 }
