--- a/client/src/Login.scss
+++ b/client/src/Login.scss
@@ -2,7 +2,7 @@
   .right-column {
     margin-top: 1em;
     .banner {
-      font: 1.5em sans-serif;
+      font: 1.5em Open Sans;
       font-weight: 600;
     }
     p.MuiTypography-root {
@@ -10,21 +10,27 @@
       margin: auto 0;
     }
     button {
-      width: 150px;
+      width: 170px;
+      height: 56px;
       margin: 0 1em;
       background-color: #fff;
     }
     form {
       width: 70%;
-      margin: 0 auto;
-      margin-top: 3em;
-      .MuiFormControl-root {
-        width: 100%;
-        margin-bottom: 1em;
-      }
-      .btn-login {
-        background-color: #3264c3;
+      margin: auto;
+      .btn-submit {
+        height: 56px;
+        width: 160px;
+        background-color: #3A8DFF;
         color: #fff;
+      }
+      .forgot-password {
+        position: absolute;
+        right: 12px;
+        top: 35%;
+        font-size: 12px;
+        text-decoration: none;
+        color: #3A8DFF;
       }
     }
   }
