--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+  font-family: Open Sans, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -8,6 +8,10 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.width-100pc{
+  width: 100%;
 }
 
 .mg-t-1 {
@@ -19,6 +23,7 @@ code {
 }
 
 .left-column {
+  mix-blend-mode: normal;
   .bubble-icon {
     text-align: center;
     position: absolute;
@@ -31,14 +36,30 @@ code {
     }
     p.MuiTypography-root {
       color: #fff;
-      font-size: 1.2em;
+      font-size: 1.625em;
+      margin-top: 40px;
+    }
+  }
+}
+form {
+  .MuiFormControl-root {
+    width: 100%;
+    margin-bottom: 1em;
+    .MuiFormLabel-root {
+      color: #B0B0B0;
+    }
+    .MuiInput-underline:hover:not(.Mui-disabled)::before {
+      border-bottom: 2px solid #D5DFEE;
+    }
+    .MuiInput-underline::before {
+      border-bottom: 1px solid #D5DFEE; 
     }
   }
 }
 
 @media only screen and (max-width: 768px)  {
   .left-column {
-    max-height: 240px;
+    max-height: 270px;
     .bubble-icon {
       position: relative;
       width: 80%;
