--- a/client/src/components/ActiveChat/styles.scss
+++ b/client/src/components/ActiveChat/styles.scss
@@ -7,6 +7,13 @@
     .bubbles {
       margin-right: 40px;
     }
+    .attachments-file {
+      img {
+        display: block;
+        max-width: 220px;
+        margin-left: 0.25em;
+      }
+    }
   }
   .push-message {
     margin-right: 40px;
