--- a/client/src/components/ActiveChat/styles.scss
+++ b/client/src/components/ActiveChat/styles.scss
@@ -2,24 +2,58 @@
   height: 100%;
   .messages-comming {
     max-height: 80%;
+    // height: calc(100vh - 160px - 64px);
     height: calc(100vh - 160px - 64px);
     overflow: auto;
     .bubbles {
       margin-right: 40px;
     }
-    .attachments-file {
-      img {
-        display: block;
-        max-width: 220px;
-        margin-left: 0.25em;
+    .attachments-files {
+      max-width: 300px;
+      width: 100%;
+      text-align: right;
+      .item-files {
+        display: inline-block;
+        margin-left: auto;
+        cursor: pointer;
+        &:first-child {
+          margin-top: .5em;
+        }
+        img {
+          width: calc(100% - 1em);
+          margin: 0 .5em;
+        }
       }
     }
   }
   .push-message {
     margin-right: 40px;
     margin-bottom: 30px;
+    position: relative;
     .MuiFormControl-root {
       margin-bottom: 0;
+    }
+    .add-attached-files {
+      position: absolute;
+      top: -110%;
+      .item-files {
+        display: inline-block;
+        margin-right: 1em;
+        cursor: pointer;
+        width: 80px;
+        height: 70px;
+        position: relative;
+        .MuiSvgIcon-root {
+          position: absolute;
+          color: #444546;
+          right: -4px;
+          top: -22px;
+        }
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
   }
 }
