--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,15 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-.height-100pc {
-  height: 100%;
-}
-
-.width-100pc{
-  width: 100%;
-}
-
-.mg-t-1 {
+.mg-t-1em {
   margin-top: 1em;
 }
 
@@ -43,7 +35,6 @@ code {
 }
 
 .left-column {
-  mix-blend-mode: normal;
   .bubble-icon {
     text-align: center;
     position: absolute;
