commit: fix margin-right register button

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -59,6 +59,7 @@ code {
   margin-top: 1em;
   .MuiBox-root:first-child {
     margin-top: 30px;
+    margin-right: 26px;
     .MuiTypography-root {
       font-size: 14px;
     }
